// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert config should support options { dimensions: false } 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg {...props}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37L37 51M51 51L37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config should support options { expandProps: 'start' } 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg {...props} width={88} height={88}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37L37 51M51 51L37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config should support options { expandProps: false } 1`] = `
"import React from 'react'

const SvgComponent = () => (
  <svg width={88} height={88}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37L37 51M51 51L37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config should support options { icon: true } 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 88 88\\" {...props}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37L37 51M51 51L37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config should support options { native: true } 1`] = `
"import React from 'react'
import Svg, { G, Path } from 'react-native-svg'

const SvgComponent = props => (
  <Svg width={88} height={88} {...props}>
    <G
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <Path d=\\"M51 37L37 51M51 51L37 37\\" />
    </G>
  </Svg>
)

export default SvgComponent
"
`;

exports[`convert config should support options { native: true, expandProps: false } 1`] = `
"import React from 'react'
import Svg, { G, Path } from 'react-native-svg'

const SvgComponent = () => (
  <Svg width={88} height={88}>
    <G
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <Path d=\\"M51 37L37 51M51 51L37 37\\" />
    </G>
  </Svg>
)

export default SvgComponent
"
`;

exports[`convert config should support options { native: true, icon: true } 1`] = `
"import React from 'react'
import Svg, { G, Path } from 'react-native-svg'

const SvgComponent = props => (
  <Svg width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 88 88\\" {...props}>
    <G
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <Path d=\\"M51 37L37 51M51 51L37 37\\" />
    </G>
  </Svg>
)

export default SvgComponent
"
`;

exports[`convert config should support options { native: true, ref: true } 1`] = `
"import React from 'react'
import Svg, { G, Path } from 'react-native-svg'

const SvgComponent = ({ svgRef, ...props }) => (
  <Svg width={88} height={88} ref={svgRef} {...props}>
    <G
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <Path d=\\"M51 37L37 51M51 51L37 37\\" />
    </G>
  </Svg>
)

const ForwardRef = React.forwardRef((props, ref) => (
  <SvgComponent svgRef={ref} {...props} />
))
export default ForwardRef
"
`;

exports[`convert config should support options { prettier: false } 1`] = `
"import React from \\"react\\";

const SvgComponent = props => <svg width={88} height={88} {...props}><g stroke=\\"#063855\\" strokeWidth={2} fill=\\"none\\" fillRule=\\"evenodd\\" strokeLinecap=\\"square\\"><path d=\\"M51 37L37 51M51 51L37 37\\" /></g></svg>;

export default SvgComponent;"
`;

exports[`convert config should support options { ref: true } 1`] = `
"import React from 'react'

const SvgComponent = ({ svgRef, ...props }) => (
  <svg width={88} height={88} ref={svgRef} {...props}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37L37 51M51 51L37 37\\" />
    </g>
  </svg>
)

const ForwardRef = React.forwardRef((props, ref) => (
  <SvgComponent svgRef={ref} {...props} />
))
export default ForwardRef
"
`;

exports[`convert config should support options { replaceAttrValues: { none: 'black' } } 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width={88} height={88} {...props}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"black\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37L37 51M51 51L37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config should support options { svgo: false } 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width=\\"88px\\" height=\\"88px\\" viewBox=\\"0 0 88 88\\" {...props}>
    <title>{'Dismiss'}</title>
    <desc>{'Created with Sketch.'}</desc>
    <defs />
    <g
      id=\\"Blocks\\"
      stroke=\\"none\\"
      strokeWidth={1}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <g id=\\"Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
        <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
        <path d=\\"M51,51 L37,37\\" id=\\"Shape\\" />
      </g>
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config should support options { template: { [Function: template] [length]: 1, [name]: 'template' } } 1`] = `
"const noop = () => null

export default noop
"
`;

exports[`convert config should support options { titleProp: true } 1`] = `
"import React from 'react'

const SvgComponent = ({ title, ...props }) => (
  <svg width={88} height={88} {...props}>
    <title>{title}</title>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37L37 51M51 51L37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config titleProp: without title added 1`] = `
"import React from 'react'

const SvgComponent = ({ title, ...props }) => (
  <svg
    width={0}
    height={0}
    style={{
      position: 'absolute',
    }}
    {...props}
  >
    <title>{title}</title>
    <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\" />
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should convert 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width={88} height={88} {...props}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37L37 51M51 51L37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should convert style attribute 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width={48} height={48} {...props}>
    <g transform=\\"translate(0 -1004.362)\\">
      <g id=\\"a\\" color=\\"#000\\" fill=\\"#a3a3a3\\" strokeWidth={8}>
        <rect
          style={{
            marker: 'none',
          }}
          width={4}
          height={4}
          x={4}
          y={1010.362}
          rx={0.2}
          ry={0.2}
          overflow=\\"visible\\"
        />
        <rect
          ry={0.2}
          rx={0.2}
          y={1010.362}
          x={12}
          height={4}
          width={32}
          style={{
            marker: 'none',
          }}
          overflow=\\"visible\\"
        />
      </g>
      <use xlinkHref=\\"#a\\" />
      <use xlinkHref=\\"#a\\" transform=\\"translate(0 8)\\" />
      <use xlinkHref=\\"#a\\" transform=\\"translate(0 16)\\" />
      <use xlinkHref=\\"#a\\" transform=\\"translate(0 24)\\" />
      <use xlinkHref=\\"#a\\" transform=\\"translate(0 32)\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should handle special SVG attributes 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg {...props}>
    <path externalResourcesRequired=\\"false\\" d=\\"M10 10h100v100H10z\\" />
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should not remove all style tags 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width={88} height={88} {...props}>
    <style>{'path{fill:red}'}</style>
    <g
      id=\\"Blocks\\"
      stroke=\\"none\\"
      strokeWidth={1}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <g id=\\"Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
        <path d=\\"M51 37L37 51M51 51L37 37\\" id=\\"Shape\\" />
      </g>
      <style />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should remove null characters 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width={25} height={25} {...props}>
    <path
      d=\\"M19.4 24.5H5.6c-2.8 0-5.1-2.3-5.1-5.1V5.6C.5 2.8 2.8.5 5.6.5h13.8c2.8 0 5.1 2.3 5.1 5.1v13.8c0 2.8-2.3 5.1-5.1 5.1z\\"
      fill=\\"#fff\\"
      stroke=\\"#434a54\\"
      strokeMiterlimit={10}
    />
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should remove style tags 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width={88} height={88} {...props}>
    <g fill=\\"red\\" fillRule=\\"evenodd\\" strokeLinecap=\\"square\\">
      <g id=\\"Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
        <path d=\\"M51 37L37 51\\" id=\\"Shape\\" />
        <path d=\\"M51 51L37 37\\" />
      </g>
      <style />
    </g>
  </svg>
)

export default SvgComponent
"
`;
